--- a/templates/about.html
+++ b/templates/about.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 
 {% extends 'base.html' %}
-
 {% block title %} About us!{% endblock %}
-
 {% block content %}
 
-<h1>{{ name }}</h1>
+<h1>About us</h1>
 
 {% endblock %}
