--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 
 {% extends 'base.html' %}
 
-{% block title %} About {% endblock %}
+{% block title %} Find routes app!{% endblock %}
 
 {% block content %}
 
