--- a/cities/templates/cities/cities_homepage.html
+++ b/cities/templates/cities/cities_homepage.html
@@ -2,8 +2,6 @@
 
 {% extends 'base.html' %}
 
-{% block title %} Список городов{% endblock %}
-
 {% block content %}
 
 <h1>Список городов</h1>
@@ -11,7 +9,9 @@
 <div class="row">
     <div class="col-md">
         {% for city in cities_list %}  <!-- from views.py -- def cities(request): -->
-            <p>{% city.name %}</p>
+            <p>
+                <a href="{% url 'app_cities:detail' pk=city.pk %}">{{ city.name }}</a>
+            <p/>
         {% endfor %}
     </div>
 </div>
