--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 {% extends 'base.html' %}
-{% block title %} About us!{% endblock %}
+{% block title %} About {% endblock %}
 {% block content %}
 
 <h1>About us</h1>
