--- a/cities/templates/cities/cities_homepage.html
+++ b/cities/templates/cities/cities_homepage.html
@@ -6,16 +6,82 @@
 
 {% block content %}
 
-<h1>Список городов</h1>
 
 <div class="row">
-    <div class="col-md">
-        {% for city in cities_list %}  <!-- from views.py -- def cities(request): -->
-            <p>
-                <a href="{% url 'app_cities:detail' pk=city.pk %}">{{ city.name }}</a>
-            </p>
+    <div class="col-md-8 mx-auto">
+        <h1 class="col-md-6 mx-auto">Список городов</h1>
+        <table class="table table-striped">
+        {% for city in page_obj %}  <!-- pagination from views.py -- class CityListView(ListView): -->
+            <tr>
+                <td>
+                    <a href="{% url 'app_cities:detail' pk=city.pk %}">{{ city.name }}</a>
+                </td>
+
+                <td>
+                    <a href="{% url 'app_cities:update' pk=city.pk %}">
+                        <button type="button" class="btn btn-info">Редактировать</button>
+                    </a>
+                </td>
+
+                <td>
+                    <a href="{% url 'app_cities:delete' pk=city.pk %}">
+                        <button type="button" class="btn btn-danger">Удалить</button>
+                    </a>
+                </td>
+            </tr>
         {% endfor %}
+        </table>
     </div>
 </div>
-  
+
+<!-- Pagination: -->
+<!-- <div class="pagination">
+    <span class="step-links">
+        {% if page_obj.has_previous %}
+            <a href="?page=1">&laquo; first</a>
+            <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+        {% endif %}
+
+        <span class="current">
+            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+        </span>
+
+        {% if page_obj.has_next %}
+            <a href="?page={{ page_obj.next_page_number }}">next</a>
+            <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+        {% endif %}
+    </span>
+</div> -->
+
+<!-- Pagination with Bootstrap: -->
+<nav aria-label="Page navigation example">
+    <ul class="pagination col-md-2 mx-auto">
+      <li class="page-item">
+        {% if page_obj.has_previous %}
+            <a class="page-link" href="?page={{ page_obj.previous_page_number }}" area-label="Previous">
+                <span aria-hidden="true">&laquo;</span>
+            </a>
+        {% endif %}
+      </li>
+
+      {% for page in page_obj.paginator.page_range %}
+        <li class="page-item {% if page == page_obj.number %} active {% endif %}">
+            <a class="page-link" href="?page={{ page }}">
+                {{ page }}
+            </a>
+        </li>
+      {% endfor %}
+      
+
+      <li class="page-item">
+        {% if page_obj.has_next %}
+            <a class="page-link" href="?page={{ page_obj.next_page_number }}" area-label="Next">
+                <span aria-hidden="true">&raquo;</span>
+            </a>
+        {% endif %}
+      </li>
+      
+    </ul>
+</nav>
+
 {% endblock %}
