--- a/cities/templates/cities/city_delete.html
+++ b/cities/templates/cities/city_delete.html
@@ -5,9 +5,13 @@
 {% block title %} Удалить город{% endblock %}
 
 {% block content %}
+<div class="alert alert-danger alert-dismissible fade show" role="alert">
+    Уверены, что хотите удалить город <strong>{{ object }}</strong>?
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div> 
 
-<h1>Удалить город {{ object }}</h1>
-
-{% include "form.html" with button='Удалить'%}
-
+{% include "form.html" with button='Удалить'%} 
+<a href="{% url 'app_cities:list_of_cities' %}"> <!-- url 'namespace for app's name (from project/urls.py) : name for url (from app/urls.py)'  -->
+    <button type="button" class="btn btn-light">Назад</button>
+</a> 
 {% endblock %}
