--- a/cities/templates/cities/city_detail.html
+++ b/cities/templates/cities/city_detail.html
@@ -11,7 +11,7 @@
 
 <div class="row">
     <div class="col-md-4">
-        <a href="{% url 'app_cities:cities' %}"> <!-- url 'namespace for app's name (from project/urls.py) : name for url (from app/urls.py)'  -->
+        <a href="{% url 'app_cities:list_of_cities' %}"> <!-- url 'namespace for app's name (from project/urls.py) : name for url (from app/urls.py)'  -->
             <button type="button" class="btn btn-primary">Назад</button>
         </a> 
         
