--- a/templates/base.html
+++ b/templates/base.html
@@ -20,10 +20,10 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="{% url 'app_cities:cities' %}">Города</a>
+                <a class="nav-link active" aria-current="page" href="{% url 'app_cities:list_of_cities' %}">Все города</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="{% url 'app_cities:create' %}">Добавить</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -47,6 +47,27 @@
           </div>
         </div>
     </nav>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8 mx-auto my-4">
+          {% if messages %}
+            {% for message in messages %}
+                {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
+                  <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                    {{ message }}
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                  </div> 
+                  {% else %}
+                  <div class="alert alert-success alert-dismissible fade show" role="alert">
+                    {{ message }}
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                  </div>
+                {% endif %}
+            {% endfor %}
+          {% endif %}
+        </div>
+      </div>
+    </div>
     <div class="container">
         {% block content %} {% endblock %}
     </div>  
