--- a/templates/base.html
+++ b/templates/base.html
@@ -20,20 +20,18 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="{% url 'app_cities:list_of_cities' %}">Все города</a>
+                <a class="nav-link" aria-current="page" href="{% url 'app_cities:list_of_cities' %}">Города</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'app_cities:create' %}">Добавить</a>
+                <a class="nav-link" href="{% url 'app_trains:list_of_trains' %}">Поезда</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
+                  Добавить
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  <li><a class="dropdown-item" href="{% url 'app_cities:create' %}">Новый город</a></li>
+                  <li><a class="dropdown-item" href="{% url 'app_trains:create' %}">Новый поезд</a></li>
                 </ul>
               </li>
               <li class="nav-item">
