--- a/cities/templates/cities/city_create.html
+++ b/cities/templates/cities/city_create.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-<h1>Добавить город</h1>
+<h1 class="col-md-4 mx-auto">Добавить город</h1>
 
 {% include "form.html" with button='Сохранить'%}
 
