--- a/templates/form.html
+++ b/templates/form.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-4 mx-auto">
         <form action="{{ action }}" method="post">
             {% csrf_token %}
             <br>
-            {{form.as_p }}
+            {{ form.as_p }}   
             <button type="submit" class="btn btn-primary">{{ button }}</button>
         </form>
     </div>
