--- a/trains/templates/trains/train_create.html
+++ b/trains/templates/trains/train_create.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-<h1>Добавить поезд</h1>
+<h1 class="col-md-4 mx-auto">Добавить поезд</h1>
 
 {% include "form.html" with button='Сохранить'%}
 
